--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
         "no-unused-vars": "off",
         "linebreak-style": "off",
         "no-underscore-dangle": "off",
-        "class-methods-use-this": "off"
+        "class-methods-use-this": "off",
+        "import/no-extraneous-dependencies": "off"
     }
 }
