postgres database implemented

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,9 @@
         "linebreak-style": "off",
         "no-underscore-dangle": "off",
         "class-methods-use-this": "off",
-        "import/no-extraneous-dependencies": "off"
+        "import/no-extraneous-dependencies": "off",
+        "arrow-parens": "off",
+        "camelcase": "off",
+        "object-curly-newline": "off"
     }
 }
