--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,8 @@
         "arrow-parens": "off",
         "camelcase": "off",
         "object-curly-newline": "off",
-        "comma-dangle": "off"
+        "comma-dangle": "off",
+        "operator-linebreak": "off",
+        "implicit-arrow-linebreak": "off"
     }
 }
