--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "joi": "^17.12.3",
     "nanoid": "^3.1.20",
     "node-pg-migrate": "^6.2.2",
-    "pg": "^8.11.5"
+    "pg": "^8.11.5",
+    "redis": "^4.6.13"
   }
 }
